--- a/2D Assets/Sprite/index.html
+++ b/2D Assets/Sprite/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+<html>
 <img src="Background.png" /> 
 <img src="Checkmark.png" /> 
 <img src="InputFieldBackground.png" /> 
@@ -3492,3 +3494,4 @@
 <img src="t_WiseGlasses_C.png" /> 
 <img src="UIMask.png" /> 
 <img src="UISprite.png" /> 
+</html>
